# rust-calculator-actix-web

./: Cargo.toml  README.md  diesel.toml
src/: main.rs
src/models/: users.rs
src/users/: views.rs
static/: index.html
