[package]
name = "actix101"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] } 
serde_json = "1" 
uuid = { version = "1", features = ["v4", "serde"] } 
lazy_static = "1.4" 
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
actix-rt = "2.9"
dotenvy = "0.15"
env_logger = "0.11.7"
log = "0.4.27"
actix-files = "0.6"
